--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,8 +1,15 @@
 version: '3.4'
 
 services:
+  webapiauth:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    ports:
+      - "80"
+
   webapi:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
       - "80"
+
