--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 *.user
 *.userosscache
 *.sln.docstates
-*.data/pgadmin
+data/pgadmin
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
