--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 *.sln.docstates
 data/pgadmin
 
+*WebApi/Infrastructure/Migrations
+*WebApiAuth/Infrastructure/Migrations
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
