--- a/WebApiAuth/WebApiAuth.csproj
+++ b/WebApiAuth/WebApiAuth.csproj
@@ -24,4 +24,8 @@
     <Folder Include="Infrastructure\Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SharedLibrary\SharedLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
