--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,11 @@ data/pgadmin
 
 *WebApi/Infrastructure/Migrations
 *WebApiAuth/Infrastructure/Migrations
+*InventarioWebApp/node_modules
+*InventarioWebApp/dist
+*InventarioWebApp/tmp
+*InventarioWebApp/out-tsc
+*InventarioWebApp/bazel-out
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -456,3 +461,47 @@ $RECYCLE.BIN/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# Compiled output
+/dist
+/tmp
+/out-tsc
+/bazel-out
+
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
+
+# IDEs and editors
+.idea/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+# Miscellaneous
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
+
+# System files
+.DS_Store
+Thumbs.db
