--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
   
 
   pgadmin:
-    container_name: pgadmin4_container
+    container_name: pgadmin4_contenedor
     image: dpage/pgadmin4
     restart: always
     environment:
