--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "WebApiDatabase": "Host=localhost;port=5432;database=blogdb;username=bloguser;password=bloguser"
+    "WebApiDatabase": "Host=localhost;port=5432;database=deusBD;username=bloguser;password=bloguser"
   },
   "Logging": {
     "LogLevel": {
